[package]
name = "rnu"
version = "0.1.2"
author  = "Linuxchr linuxchr@mail.linuxchr.de"
description = "rnu = Rust Network Utilities, Some Network Utilities for Linux"
license= "WTFPL"
repository = "https://github.com/linuxchr/rnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 3
debug = false
